--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,3 +1,9 @@
+body {
+  font-family: 'Courier New', 'sans-serif';
+  font-size: 12px;
+  line-height: 11px;
+}
+
 .main-content {
   padding-top: 75px;
 }
