--- a/src/index.ejs
+++ b/src/index.ejs
@@ -11,12 +11,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <meta name="Robots" content="index,follow"/>
-    <meta name="verify-v1" content="Rc6KplhAOgXutS7j+eHBaJpe4g21p3yvO663bjNJ8v0="/>
-    <meta name="google-site-verification" content="zrmxmTlJtteLgRs9qxjBwvl2y22ydIzDr3gNnuC-ApY"/>
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.css" />
+    <link rel="stylesheet" href="css/carousel.css" />
+    <link rel="stylesheet" href="css/custom.css" />
+    <link rel="stylesheet" href="css/extra.css" />
+    <link rel="stylesheet" href="css/sticky-footer.css" />
     <!--
     <link rel="apple-touch-icon" href="/img/touch-icon-iphone.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="/img/touch-icon-ipad.png" />
@@ -143,17 +144,13 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="copyright">
-                    <p>&copy;2017 Marc Flennert. All rights reserved.
+                    <p>&copy;2018 Marc Flennert. All rights reserved.
                         Los Angeles, California.</p>
                 </div>
             </div>
         </div>
     </div>
 </footer>
-
-<!--This sets the baseUrl to the "scripts" directory, and
-    loads a script that will have a module ID of 'main'-->
-<script data-main="js/rjsMain" src="js/require.js"></script>
 
 </body>
 </html>
