Add Express build conf.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,11 +13,11 @@
     <meta name="Robots" content="index,follow"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/bootstrap-theme.css" />
-    <link rel="stylesheet" href="css/carousel.css" />
-    <link rel="stylesheet" href="css/custom.css" />
-    <link rel="stylesheet" href="css/extra.css" />
-    <link rel="stylesheet" href="css/sticky-footer.css" />
+    <link rel="stylesheet" href="./css/bootstrap-theme.css" />
+    <link rel="stylesheet" href="./css/carousel.css" />
+    <link rel="stylesheet" href="./css/custom.css" />
+    <link rel="stylesheet" href="./css/extra.css" />
+    <link rel="stylesheet" href="./css/sticky-footer.css" />
     <!--
     <link rel="apple-touch-icon" href="/img/touch-icon-iphone.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="/img/touch-icon-ipad.png" />
@@ -125,7 +125,7 @@
             </div>
         </div>
         <div class="col-md-3 col-xs-12">
-            <img src="img/marcflennert01md.jpeg" alt="Marc Flennert" class="img-responsive"/><br/>
+            <img src="../img/marcflennert01md.jpeg" alt="Marc Flennert" class="img-responsive"/><br/>
 
             <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
                 combination of his natural creativity and technical know how, he's able to infuse his
