Prepare for Bootstrap 4.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>Marc Flennert</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
