--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -67,7 +67,7 @@
                 <div>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/196012460" class="embed-responsive-item" frameborder="0"
-                            webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            allowfullscreen></iframe>
                     </div>
                     <p class="video-title">RANGE ROVER SPORT - <em>Inferno</em></p>
                 </div>
@@ -75,7 +75,7 @@
                 <div>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/178618648" class="embed-responsive-item" frameborder="0"
-                            webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            allowfullscreen></iframe>
                     </div>
                     <p class="video-title">BMW SCRAMBLER - <em>Teaser</em></p>
                 </div>
@@ -83,7 +83,7 @@
                 <div>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/120320873" class="embed-responsive-item" frameborder="0"
-                            webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            allowfullscreen></iframe>
                     </div>
                     <p class="video-title">MARK KNOPFLER - <em>Tracker</em></p>
                 </div>
@@ -91,7 +91,7 @@
                 <div>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/79350677" class="embed-responsive-item" frameborder="0"
-                                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                                allowfullscreen></iframe>
                     </div>
                     <p class="video-title">VOLKSWAGEN - <em>Rally</em></p>
                 </div>
@@ -99,7 +99,7 @@
                 <div>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/45605348" class="embed-responsive-item" frameborder="0"
-                                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                                allowfullscreen></iframe>
                     </div>
                     <p class="video-title">PROJECT F1297 - <em>Music by Gesaffelstein 'Viol'</em>em</p>
                 </div>
@@ -107,7 +107,7 @@
                 <div>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/60107207" class="embed-responsive-item" frameborder="0"
-                                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                                allowfullscreen></iframe>
                     </div>
                     <p class="video-title">LACOSTE L!VE - <em>Tokyo</em></p>
                 </div>
@@ -115,7 +115,7 @@
                 <div>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/116001568" class="embed-responsive-item" frameborder="0"
-                                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                                allowfullscreen></iframe>
                     </div>
                     <p class="video-title">VOLVO - <em>XC60</em></p>
                 </div>
@@ -123,7 +123,7 @@
                 <div>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/61056995" class="embed-responsive-item" frameborder="0"
-                                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                                allowfullscreen></iframe>
                     </div>
                     <p class="video-title">NIKON Imagination</p>
                 </div>
