Update nav menu.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -32,22 +32,17 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="http://photo.marcflennert.com/">Still Photography</a>
+            <li class="nav-item">
+                <a class="nav-link" target="_top" href="http://swisslab.tumblr.com/">Art</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Commerce</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" target="_top" href="http://photo.marcflennert.com/">Photography</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="mailto:info@marcflennert.com">Contact</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Portfolio
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="http://swisslab.tumblr.com/">Tumblr</a>
-                    <a class="dropdown-item" href="https://vimeo.com/marcflennert">Vimeo</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#art">Art</a>
-                </div>
             </li>
         </ul>
     </div>
