Move bio to its own page.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -89,7 +89,7 @@
                         <iframe src="https://player.vimeo.com/video/45605348" class="embed-responsive-item" frameborder="0"
                                 allowfullscreen></iframe>
                     </div>
-                    <p class="video-title">PROJECT F1297 - <em>Music by Gesaffelstein 'Viol'</em>em</p>
+                    <p class="video-title">PROJECT F1297 - <em>Music by Gesaffelstein 'Viol'</em></p>
                 </div>
 
                 <div>
@@ -117,21 +117,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3 col-xs-12">
-            <img src="../img/marcflennert01md.jpeg" alt="Marc Flennert" class="img-responsive"/><br/>
-
-            <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
-                combination of his natural creativity and technical know how, he's able to infuse his
-                approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
-                Marc Flennert's passion is the practice of cinematography. With the combination of his
-                natural creativity and technical know how, he's able to infuse his approach with a style of
-                his own. Over the years Flennert gained a vast experience working hand in hand with award
-                winning directors, producers and agencies servicing major brands. Flennert continues to
-                refine his talents by continually immersing himself in an array of projects around the world.</p>
-        </div>
     </div>
 </div>
-
 <footer class="footer">
     <div class="container">
         <div class="row">
