Add content for About page.

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,12 +1,145 @@
-<div class="col-md-3 col-xs-12">
-    <img src="../img/marcflennert01md.jpeg" alt="Marc Flennert" class="img-responsive"/><br/>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+    <title>Marc Flennert</title>
 
-    <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
-        combination of his natural creativity and technical know how, he's able to infuse his
-        approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
-        Marc Flennert's passion is the practice of cinematography. With the combination of his
-        natural creativity and technical know how, he's able to infuse his approach with a style of
-        his own. Over the years Flennert gained a vast experience working hand in hand with award
-        winning directors, producers and agencies servicing major brands. Flennert continues to
-        refine his talents by continually immersing himself in an array of projects around the world.</p>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+    <meta name="Robots" content="index,follow"/>
+
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/bootstrap-theme.css" />
+    <link rel="stylesheet" href="./css/custom.css" />
+    <link rel="stylesheet" href="./css/extra.css" />
+    <!--
+    <link rel="apple-touch-icon" href="/img/touch-icon-iphone.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/touch-icon-ipad.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/touch-icon-iphone4.png" />
+    -->
+</head>
+<body style="background-color: #F6F6F6">
+
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#">Marc Flennert</a>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" target="_top" href="bio.html">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Vimeo</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="mailto:info@marcflennert.com">Contact</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="container main-content">
+    <div class="row">
+        <div class="col-md-9 col-xs-12">
+            <div class="custom-well" id="page-body">
+                <div>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/196012460" class="embed-responsive-item" frameborder="0"
+                                allowfullscreen></iframe>
+                    </div>
+                    <p class="video-title">RANGE ROVER SPORT - <em>Inferno</em></p>
+                </div>
+
+                <div>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/178618648" class="embed-responsive-item" frameborder="0"
+                                allowfullscreen></iframe>
+                    </div>
+                    <p class="video-title">BMW SCRAMBLER - <em>Teaser</em></p>
+                </div>
+
+                <div>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/120320873" class="embed-responsive-item" frameborder="0"
+                                allowfullscreen></iframe>
+                    </div>
+                    <p class="video-title">MARK KNOPFLER - <em>Tracker</em></p>
+                </div>
+
+                <div>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/79350677" class="embed-responsive-item" frameborder="0"
+                                allowfullscreen></iframe>
+                    </div>
+                    <p class="video-title">VOLKSWAGEN - <em>Rally</em></p>
+                </div>
+
+                <div>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/45605348" class="embed-responsive-item" frameborder="0"
+                                allowfullscreen></iframe>
+                    </div>
+                    <p class="video-title">PROJECT F1297 - <em>Music by Gesaffelstein 'Viol'</em></p>
+                </div>
+
+                <div>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/60107207" class="embed-responsive-item" frameborder="0"
+                                allowfullscreen></iframe>
+                    </div>
+                    <p class="video-title">LACOSTE L!VE - <em>Tokyo</em></p>
+                </div>
+
+                <div>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/116001568" class="embed-responsive-item" frameborder="0"
+                                allowfullscreen></iframe>
+                    </div>
+                    <p class="video-title">VOLVO - <em>XC60</em></p>
+                </div>
+
+                <div>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/61056995" class="embed-responsive-item" frameborder="0"
+                                allowfullscreen></iframe>
+                    </div>
+                    <p class="video-title">NIKON Imagination</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-xs-12">
+            <img src="../img/marcflennert01md.jpeg" alt="Marc Flennert" class="img-responsive"/><br/>
+
+            <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
+                combination of his natural creativity and technical know how, he's able to infuse his
+                approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
+                Marc Flennert's passion is the practice of cinematography. With the combination of his
+                natural creativity and technical know how, he's able to infuse his approach with a style of
+                his own. Over the years Flennert gained a vast experience working hand in hand with award
+                winning directors, producers and agencies servicing major brands. Flennert continues to
+                refine his talents by continually immersing himself in an array of projects around the world.</p>
+        </div>
+    </div>
 </div>
+
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="copyright">
+                    <p>&copy;2018 Marc Flennert. All rights reserved.
+                        Los Angeles, California.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+</body>
+</html>
