--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -33,13 +33,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" target="_top" href="http://swisslab.tumblr.com/">Art</a>
+                <a class="nav-link" target="_top" href="bio.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Commerce</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" target="_top" href="http://photo.marcflennert.com/">Photography</a>
+                <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Vimeo</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="mailto:info@marcflennert.com">Contact</a>
