--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -33,7 +33,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" target="_top" href="bio.html">About</a>
+                <a class="nav-link" target="_top" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" target="_top" href="/about">About</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Vimeo</a>
