Tweaks to fix production build.

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -24,100 +24,11 @@
 </head>
 <body style="background-color: #F6F6F6">
 
-<nav class="navbar navbar-expand-md navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#">Marc Flennert</a>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" target="_top" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" target="_top" href="/about">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Vimeo</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="mailto:info@marcflennert.com">Contact</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<% include ../partials/navbar %>
 
 <div class="container main-content">
     <div class="row">
-        <div class="col-md-9 col-xs-12">
-            <div class="custom-well" id="page-body">
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/196012460" class="embed-responsive-item" frameborder="0"
-                                allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">RANGE ROVER SPORT - <em>Inferno</em></p>
-                </div>
-
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/178618648" class="embed-responsive-item" frameborder="0"
-                                allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">BMW SCRAMBLER - <em>Teaser</em></p>
-                </div>
-
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/120320873" class="embed-responsive-item" frameborder="0"
-                                allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">MARK KNOPFLER - <em>Tracker</em></p>
-                </div>
-
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/79350677" class="embed-responsive-item" frameborder="0"
-                                allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">VOLKSWAGEN - <em>Rally</em></p>
-                </div>
-
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/45605348" class="embed-responsive-item" frameborder="0"
-                                allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">PROJECT F1297 - <em>Music by Gesaffelstein 'Viol'</em></p>
-                </div>
-
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/60107207" class="embed-responsive-item" frameborder="0"
-                                allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">LACOSTE L!VE - <em>Tokyo</em></p>
-                </div>
-
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/116001568" class="embed-responsive-item" frameborder="0"
-                                allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">VOLVO - <em>XC60</em></p>
-                </div>
-
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/61056995" class="embed-responsive-item" frameborder="0"
-                                allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">NIKON Imagination</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-xs-12">
+        <div class="col-md-12 col-xs-12">
             <img src="../img/marcflennert01md.jpeg" alt="Marc Flennert" class="img-responsive"/><br/>
 
             <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
@@ -144,5 +55,6 @@
         </div>
     </div>
 </footer>
+
 </body>
 </html>
