--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,30 +23,7 @@
     -->
 </head>
 <body style="background-color: #F6F6F6">
-
-<nav class="navbar navbar-expand-md navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#">Marc Flennert</a>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" target="_top" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" target="_top" href="/about">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Vimeo</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="mailto:info@marcflennert.com">Contact</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<% include ../partials/navbar %>
 
 <div class="container main-content">
     <div class="row">
@@ -131,5 +108,6 @@
         </div>
     </div>
 </footer>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
