--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,35 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-md navbar-light bg-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
+    <a class="navbar-brand" href="#">Marc Flennert</a>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#stills">Stills <span class="sr-only">(current)</span></a>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" target="_top" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" target="_top" href="/about">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Vimeo</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="mailto:info@marcflennert.com">Contact</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="http://swisslab.tumblr.com/">Tumblr</a>
-                    <a class="dropdown-item" href="https://vimeo.com/marcflennert">Vimeo</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#art">Art</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
     </div>
 </nav>
