Separate pages - both working in local dev environment.

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <title>Marc Flennert</title>
+    <title>About Marc Flennert</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,10 +12,6 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <meta name="Robots" content="index,follow"/>
 
-    <link rel="stylesheet" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./css/bootstrap-theme.css" />
-    <link rel="stylesheet" href="./css/custom.css" />
-    <link rel="stylesheet" href="./css/extra.css" />
     <!--
     <link rel="apple-touch-icon" href="/img/touch-icon-iphone.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="/img/touch-icon-ipad.png" />
