--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,7 +10,7 @@
                 <a class="nav-link" target="_top" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" target="_top" href="/about">About</a>
+                <a class="nav-link" target="_top" href="/about.html">About</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Vimeo</a>
