--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -25,7 +25,7 @@
 <div class="container main-content">
     <div class="row">
         <div class="col-md-12 col-xs-12">
-            <img src="../img/marcflennert01md.jpeg" alt="Marc Flennert" class="img-responsive"/><br/>
+            <img src="/img/marcflennert01md.jpg" alt="Marc Flennert" class="img-responsive"/><br/>
 
             <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
                 combination of his natural creativity and technical know how, he's able to infuse his
