--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <title>Marc Flennert</title>
+    <title>Professional Work - By Marc Flennert</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,11 +19,11 @@
     -->
 </head>
 <body style="background-color: #F6F6F6">
-<% include ../partials/navbar %>
+<% include ../partials/navbar.ejs %>
 
 <div class="container main-content">
     <div class="row">
-        <div class="col-md-9 col-xs-12">
+        <div class="col-md-9 col-xs-9">
             <div class="custom-well" id="page-body">
                 <div>
                     <div class="embed-responsive embed-responsive-16by9">
@@ -92,17 +92,8 @@
         </div>
     </div>
 </div>
-<footer class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="copyright">
-                    <p>&copy;2018 Marc Flennert. All rights reserved.
-                        Los Angeles, California.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
+
+<% include ../partials/footer.ejs %>
+
 </body>
 </html>
