--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <title>Personal Bio - About Marc Flennert</title>
+    <title>Professional Bio - About Marc Flennert</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
