Fix issue with Bootstrap markup (Bootlint).

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,23 +1,25 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#">Marc Flennert</a>
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#">Marc Flennert</a>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" target="_top" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" target="_top" href="/about.html">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Vimeo</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="mailto:info@marcflennert.com">Contact</a>
-            </li>
-        </ul>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" target="_top" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_top" href="/about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Vimeo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="mailto:info@marcflennert.com">Contact</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
