Prep for deployment to production.

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -23,11 +23,11 @@
 <% include ../partials/navbar.ejs %>
 
 <div class="container main-content">
-    <div class="row">
-        <div class="col-md-3 col-xs-3">
+    <div class="row justify-content-center">
+        <div class="col-md-6 col-xs-12">
             <img src="/img/marcflennert01md.jpg" alt="Marc Flennert" class="img-responsive" height="188" width="250" style="height:188px; width:250px; display: inline-block" />
         </div>
-        <div class="col-md-9 col-xs-9">
+        <div class="col-md-6 col-xs-12">
             <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
                 combination of his natural creativity and technical know how, he's able to infuse his
                 approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
