--- a/views/pages/reel.ejs
+++ b/views/pages/reel.ejs
@@ -22,8 +22,8 @@
 <% include ../partials/navbar.ejs %>
 
 <div class="container main-content">
-    <div class="row">
-        <div class="col-md-9 col-xs-9">
+    <div class="row justify-content-center">
+        <div class="col-md-12 col-xs-6">
             <div class="custom-well" id="page-body">
                 <div>
                     <div class="embed-responsive embed-responsive-16by9">
