--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -12,11 +12,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <meta name="Robots" content="index,follow"/>
 
-    <!--
-    <link rel="apple-touch-icon" href="/img/touch-icon-iphone.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/touch-icon-ipad.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/touch-icon-iphone4.png" />
-    -->
+    <% include ../partials/css.ejs %>
+
 </head>
 <body style="background-color: #F6F6F6">
 
@@ -24,10 +21,10 @@
 
 <div class="container main-content">
     <div class="row justify-content-center">
-        <div class="col-md-6 col-xs-12">
-            <img src="/img/marcflennert01md.jpg" alt="Marc Flennert" class="img-responsive" height="188" width="250" style="height:188px; width:250px; display: inline-block" />
+        <div class="col-xs-offset-3">
+            <div id="profile"></div>
         </div>
-        <div class="col-md-6 col-xs-12">
+        <div class="col-xs-offset-3">
             <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
                 combination of his natural creativity and technical know how, he's able to infuse his
                 approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
