--- a/views/pages/reel.ejs
+++ b/views/pages/reel.ejs
@@ -12,11 +12,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <meta name="Robots" content="index,follow"/>
 
-    <!--
-    <link rel="apple-touch-icon" href="/img/touch-icon-iphone.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/touch-icon-ipad.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/touch-icon-iphone4.png" />
-    -->
+    <% include ../partials/css.ejs %>
+
 </head>
 <body style="background-color: #F6F6F6">
 <% include ../partials/navbar.ejs %>
