Fix issue with CSS files not loading.

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -21,10 +21,10 @@
 
 <div class="container main-content">
     <div class="row justify-content-center">
-        <div class="col-xs-offset-3">
+        <div class="col-md-12 col-xs-6">
             <div id="profile"></div>
         </div>
-        <div class="col-xs-offset-3">
+        <div class="col-md-12 col-xs-6">
             <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
                 combination of his natural creativity and technical know how, he's able to infuse his
                 approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
