--- a/views/partials/css.ejs
+++ b/views/partials/css.ejs
@@ -1,5 +1,4 @@
-<link href="css/bootstrap.min.css" />
-<link href="css/bootstrap-theme.css" />
-<link href="css/custom.css" />
-<link href="css/extra.css" />
-<link href="css/sticky-footer.css" />
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="css/custom.css" />
+<link rel="stylesheet" type="text/css" href="css/extra.css" />
+<link rel="stylesheet" type="text/css" href="css/sticky-footer.css" />
