--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" target="_top" href="/">Home</a>
+                    <a class="nav-link" target="_top" href="/">Reel</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_top" href="/about.html">About</a>
