Fix nav link to about.html.

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,7 +11,7 @@
                     <a class="nav-link" target="_top" href="/">Reel</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_top" href="/about.html">About</a>
+                    <a class="nav-link" target="_top" href="/about">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Vimeo</a>
