--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,18 +3,20 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Marc Flennert</a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" target="_top" href="/">Work</a>
+                    <a class="nav-link" target="_top" href="/">Commercials</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Shorts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_top" href="http://photo.marcflenner.com">Photography</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_top" href="/about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Vimeo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="mailto:info@marcflennert.com">Contact</a>
