First round of edits.

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,9 @@
 <footer class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-sm-12">
                 <div class="copyright">
-                    <p>&copy;2018 Marc Flennert. All rights reserved.
-                        Los Angeles, California.</p>
+                    <p style="text-align: center">&copy;2018 Marc Flennert. All rights reserved.</p>
                 </div>
             </div>
         </div>
