--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <title>Professional Bio - About Marc Flennert</title>
+    <title>Professional Biography - About Marc Flennert</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,20 +19,24 @@
 
 <% include ../partials/navbar.ejs %>
 
-<div class="container main-content">
+<div class="container-fluid">
     <div class="row justify-content-center">
-        <div class="col-md-12 col-xs-6">
+        <div class="col-sm-3">
             <div id="profile"></div>
         </div>
-        <div class="col-md-12 col-xs-6">
-            <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
-                combination of his natural creativity and technical know how, he's able to infuse his
-                approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
-                Marc Flennert's passion is the practice of cinematography. With the combination of his
-                natural creativity and technical know how, he's able to infuse his approach with a style of
-                his own. Over the years Flennert gained a vast experience working hand in hand with award
-                winning directors, producers and agencies servicing major brands. Flennert continues to
-                refine his talents by continually immersing himself in an array of projects around the world.</p>
+        <div class="col-sm-9">
+            <div class="custom-well" id="page-body">
+                <div>
+                    <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
+                        combination of his natural creativity and technical know how, he's able to infuse his
+                        approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
+                        Marc Flennert's passion is the practice of cinematography. With the combination of his
+                        natural creativity and technical know how, he's able to infuse his approach with a style of
+                        his own. Over the years Flennert gained a vast experience working hand in hand with award
+                        winning directors, producers and agencies servicing major brands. Flennert continues to
+                        refine his talents by continually immersing himself in an array of projects around the world.</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
