--- a/views/pages/work.ejs
+++ b/views/pages/work.ejs
@@ -19,9 +19,9 @@
 
 <% include ../partials/navbar.ejs %>
 
-<div class="container main-content">
+<div class="container-fluid">
     <div class="row justify-content-center">
-        <div class="col-md-12 col-xs-6">
+        <div class="col-md-12 col-sm-12">
             <div class="custom-well" id="page-body">
                 <div>
                     <div class="embed-responsive embed-responsive-16by9">
