--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,10 +10,10 @@
                     <a class="nav-link" target="_top" href="/">Commercials</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Shorts</a>
+                    <a class="nav-link" rel="noopener" target="_top" href="https://vimeo.com/marcflennert">Shorts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_top" href="http://photo.marcflenner.com">Photography</a>
+                    <a class="nav-link" rel="noopener" target="_top" href="http://photo.marcflennert.com">Photography</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_top" href="/about.html">About</a>
