--- a/src/work.ejs
+++ b/src/work.ejs
@@ -12,12 +12,10 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <meta name="Robots" content="index,follow"/>
 
-<% include ../partials/css.ejs %>
-
 </head>
 <body style="background-color: #F6F6F6">
 
-<% include ../partials/navbar.ejs %>
+<% include partials/navbar.ejs %>
 
 <div class="container-fluid">
     <div class="row justify-content-center">
@@ -91,7 +89,7 @@
     </div>
 </div>
 
-<% include ../partials/footer.ejs %>
+<% include partials/footer.ejs %>
 
 </body>
 </html>
