Remove inline style on body.

--- a/src/about.ejs
+++ b/src/about.ejs
@@ -13,7 +13,7 @@
     <meta name="Robots" content="index,follow"/>
 
 </head>
-<body style="background-color: #F6F6F6">
+<body>
 
 <% include partials/navbar.ejs %>
 
