Add compression. Add offline manifest.

--- a/src/about.ejs
+++ b/src/about.ejs
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <title>Professional Biography - About Marc Flennert</title>
+    <title>Professional Biography</title>
+    <meta name="Description" content="Professional information about Marc Flennert." />
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <meta name="Robots" content="index,follow"/>
+<% include partials/meta.ejs %>
 
 </head>
 <body>
