--- a/src/about.ejs
+++ b/src/about.ejs
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <title>Professional Biography</title>
-    <meta name="Description" content="Professional information about Marc Flennert." />
+  <title>Professional Biography</title>
+  <meta name="Description" content="Professional information about Marc Flennert."/>
 
-<% include partials/meta.ejs %>
+  <% include partials/meta.ejs %>
 
 </head>
 <body>
 
 <% include partials/navbar.ejs %>
 
-<div class="container-fluid">
-    <div class="row justify-content-center">
-        <div class="col-sm-4">
-            <div id="profile"></div>
+<main>
+  <article>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-4 col-12">
+          <div id="profile"></div>
         </div>
-        <div class="col-sm-8">
-            <div class="custom-well" id="page-body">
-                <div>
-                    <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
-                        combination of his natural creativity and technical know how, he's able to infuse his
-                        approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
-                        Marc Flennert's passion is the practice of cinematography. With the combination of his
-                        natural creativity and technical know how, he's able to infuse his approach with a style of
-                        his own. Over the years Flennert gained a vast experience working hand in hand with award
-                        winning directors, producers and agencies servicing major brands. Flennert continues to
-                        refine his talents by continually immersing himself in an array of projects around the world.</p>
-                </div>
-            </div>
+        <div class="col-sm-8 col-12">
+          <div class="custom-well media-body" id="page-body">
+            <p class="lead">A lifelong photographer, Marc Flennert's passion is the practice of cinematography.</p>
+            <p>With the combination of his natural creativity and technical know how, he's able to infuse his approach with a style of his own. Over the years he's gained vast experience working hand in hand with award winning directors, producers and agencies servicing major brands. Flennert continues to refine his talents by continually immersing himself in an array of projects around the world.</p>
+          </div>
         </div>
+      </div>
     </div>
-</div>
+  </article>
+</main>
 
-<% include partials/footer.ejs  %>
+<% include partials/footer.ejs %>
 
 </body>
 </html>
