--- a/src/work.ejs
+++ b/src/work.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <title>Professional Work</title>
-    <meta name="Description" content="Reel of professional work by Marc Flennert." />
+  <title>Professional Work</title>
+  <meta name="Description" content="Reel of professional work by Marc Flennert."/>
 
-<% include partials/meta.ejs %>
+  <% include partials/meta.ejs %>
 
 </head>
 <body>
@@ -12,75 +12,67 @@
 <% include partials/navbar.ejs %>
 
 <div class="container-fluid">
-    <div class="row justify-content-center">
-        <div class="col-md-12 col-sm-12">
-            <div class="custom-well" id="page-body">
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/196012460" class="embed-responsive-item" frameborder="0"
-                            allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">RANGE ROVER SPORT - <em>Inferno</em></p>
-                </div>
-
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/178618648" class="embed-responsive-item" frameborder="0"
-                            allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">BMW SCRAMBLER - <em>Teaser</em></p>
-                </div>
-
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/120320873" class="embed-responsive-item" frameborder="0"
-                            allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">MARK KNOPFLER - <em>Tracker</em></p>
-                </div>
-
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/79350677" class="embed-responsive-item" frameborder="0"
-                                allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">VOLKSWAGEN - <em>Rally</em></p>
-                </div>
-
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/45605348" class="embed-responsive-item" frameborder="0"
-                                allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">PROJECT F1297 - <em>Music by Gesaffelstein 'Viol'</em></p>
-                </div>
-
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/60107207" class="embed-responsive-item" frameborder="0"
-                                allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">LACOSTE L!VE - <em>Tokyo</em></p>
-                </div>
-
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/116001568" class="embed-responsive-item" frameborder="0"
-                                allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">VOLVO - <em>XC60</em></p>
-                </div>
-
-                <div>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://player.vimeo.com/video/61056995" class="embed-responsive-item" frameborder="0"
-                                allowfullscreen></iframe>
-                    </div>
-                    <p class="video-title">NIKON Imagination</p>
-                </div>
-            </div>
+  <div class="row justify-content-center">
+    <div class="col-md-12 col-sm-12">
+      <div class="custom-well" id="page-body">
+        <div>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://player.vimeo.com/video/196012460" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <p class="video-title">RANGE ROVER SPORT - <em>Inferno</em></p>
         </div>
+
+        <div>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://player.vimeo.com/video/178618648" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <p class="video-title">BMW SCRAMBLER - <em>Teaser</em></p>
+        </div>
+
+        <div>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://player.vimeo.com/video/120320873" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <p class="video-title">MARK KNOPFLER - <em>Tracker</em></p>
+        </div>
+
+        <div>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://player.vimeo.com/video/79350677" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <p class="video-title">VOLKSWAGEN - <em>Rally</em></p>
+        </div>
+
+        <div>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://player.vimeo.com/video/45605348" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <p class="video-title">PROJECT F1297 - <em>Music by Gesaffelstein 'Viol'</em></p>
+        </div>
+
+        <div>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://player.vimeo.com/video/60107207" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <p class="video-title">LACOSTE L!VE - <em>Tokyo</em></p>
+        </div>
+
+        <div>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://player.vimeo.com/video/116001568" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <p class="video-title">VOLVO - <em>XC60</em></p>
+        </div>
+
+        <div>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://player.vimeo.com/video/61056995" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <p class="video-title">NIKON Imagination</p>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
 
 <% include partials/footer.ejs %>
