--- a/src/about.ejs
+++ b/src/about.ejs
@@ -15,11 +15,10 @@
   <article>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-4 col-12">
+        <div class="col-md-3 col-sm-4 col-12">
           <div id="profile"></div>
         </div>
-        <div class="col-sm-8 col-12">
-          <div class="custom-well media-body" id="page-body">
+        <div class="col-md-9 col-sm-8 col-12">
             <p class="lead">A lifelong photographer, Marc Flennert's passion is the practice of cinematography.</p>
             <p>With the combination of his natural creativity and technical know how, he's able to infuse his approach with a style of his own. Over the years he's gained vast experience working hand in hand with award winning directors, producers and agencies servicing major brands. Flennert continues to refine his talents by continually immersing himself in an array of projects around the world.</p>
           </div>
