--- a/src/partials/navbar.ejs
+++ b/src/partials/navbar.ejs
@@ -7,13 +7,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" target="_top" href="/">Commercials</a>
+                    <a class="nav-link" target="_top" href="/index.html">Commercials</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" rel="noopener" target="_top" href="https://vimeo.com/marcflennert">Shorts</a>
+                    <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Shorts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" rel="noopener" target="_top" href="http://photo.marcflennert.com">Photography</a>
+                    <a class="nav-link" target="_top" href="http://photo.marcflennert.com">Photography</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_top" href="/about.html">About</a>
