Move meta description to HTML plugin.

--- a/src/about.ejs
+++ b/src/about.ejs
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <title>Professional Biography</title>
-  <meta name="Description" content="Professional information about Marc Flennert."/>
-
+  <title>About Marc Flennert</title>
   <% include partials/meta.ejs %>
-
 </head>
 <body>
 
