--- a/src/work.ejs
+++ b/src/work.ejs
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <title>Professional Work</title>
-  <meta name="Description" content="Reel of professional work by Marc Flennert."/>
-
+  <title>Commercials by Marc Flennert</title>
   <% include partials/meta.ejs %>
-
 </head>
 <body>
 
