Open external links in new window.

--- a/src/partials/navbar.ejs
+++ b/src/partials/navbar.ejs
@@ -10,10 +10,10 @@
                     <a class="nav-link" target="_top" href="/index.html">Commercials</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_top" href="https://vimeo.com/marcflennert">Shorts</a>
+                    <a class="nav-link" target="_blank" rel="noopener" href="https://vimeo.com/marcflennert">Shorts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_top" href="http://photo.marcflennert.com">Photography</a>
+                    <a class="nav-link" target="_blank" rel="noopener" href="http://photo.marcflennert.com">Photography</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_top" href="/about.html">About</a>
