Add non-breaking spaces.

--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -3,7 +3,7 @@
         <div class="row justify-content-center">
             <div class="col-sm-12">
                 <div class="copyright">
-                    <p style="text-align: center">&copy;2018 Marc Flennert. All rights reserved.</p>
+                    <p style="text-align: center">&copy;2018&nbsp;Marc Flennert. All&nbsp;rightsreserved.</p>
                 </div>
             </div>
         </div>
