--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,19 +8,26 @@ $body-color: #000;
 @import '../../node_modules/bootstrap/scss/bootstrap';
 
 
-// Custom.scss
 // Option B: Include parts of Bootstrap
 
 // Required
-//@import "../../node_modules/bootstrap/scss/functions";
-//@import "../../node_modules/bootstrap/scss/variables";
-//@import "../../node_modules/bootstrap/scss/mixins";
+@import "../../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/variables";
+@import "../../node_modules/bootstrap/scss/mixins";
+@import "../../node_modules/bootstrap/scss/utilities";
 
 // Optional
 //@import "../../node_modules/bootstrap/scss/reboot";
 //@import "../../node_modules/bootstrap/scss/type";
-//@import "../../node_modules/bootstrap/scss/images";
+@import "../../node_modules/bootstrap/scss/images";
 //@import "../../node_modules/bootstrap/scss/code";
-//@import "../../node_modules/bootstrap/scss/grid";
+@import "../../node_modules/bootstrap/scss/grid";
+@import "../../node_modules/bootstrap/scss/dropdown";
+@import "../../node_modules/bootstrap/scss/nav";
+@import "../../node_modules/bootstrap/scss/navbar";
+//@import "../../node_modules/bootstrap/scss/popover";
+@import "../../node_modules/bootstrap/scss/transitions";
+
+// Custom.scss
 
 @import './custom.scss';
