Add nbsp characters to footer copy.

--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container-fluid">
-        <div class="row justify-content-center">
-            <div class="col-sm-12">
+        <div class="row">
+            <div class="col-12">
                 <div class="copyright">
                     <p style="text-align: center">&copy;2018&nbsp&nbsp;Marc&nbsp;Flennert. All&nbsp&nbsp;rights&nbsp;reserved.</p>
                 </div>
