disable node_modules cache

--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -1,9 +1,9 @@
 <footer class="footer">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-12">
                 <div class="copyright">
-                    <p style="text-align: center">&copy;2018&nbsp&nbsp;Marc&nbsp;Flennert. All&nbsp&nbsp;rights&nbsp;reserved.</p>
+                    <p style="text-align: center">&copy;2018 Marc&nbsp;Flennert. All rights reserved.</p>
                 </div>
             </div>
         </div>
