--- a/src/work.ejs
+++ b/src/work.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <title>Commercials by Marc Flennert</title>
-  <% include partials/meta.ejs %>
+  <% include partials/head.ejs %>
 </head>
 <body>
 
