--- a/src/partials/head.ejs
+++ b/src/partials/head.ejs
@@ -4,3 +4,4 @@
 <meta name="Robots" content="index,follow" />
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+<link rel="manifest" href="/manifest.json" />
