--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: 'MonospaceTypewriter' !important;
+  font-family: 'MonospaceTypewriter', sans-serif !important;
 }
 
 // Responsive Typography
