Remove open option from build-dev.

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,14 +1,14 @@
 // Your customize CSS
-@font-face {
-  font-family: 'MonospaceTypewriter';
-  font-style:  normal;
-  font-weight: 400;
-  src: url('../fonts/MonospaceTypewriter.woff') format('woff');
-}
-
-body {
-  font-family: 'MonospaceTypewriter', sans-serif !important;
-}
+//@font-face {
+//  font-family: 'MonospaceTypewriter';
+//  font-style:  normal;
+//  font-weight: 400;
+//  src: url('../fonts/MonospaceTypewriter.woff') format('woff');
+//}
+//
+//body {
+//  font-family: 'MonospaceTypewriter', sans-serif !important;
+//}
 
 // Responsive Typography
 
