--- a/src/partials/navbar.ejs
+++ b/src/partials/navbar.ejs
@@ -4,8 +4,8 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
+        <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" target="_top" href="/index.html">Commercials</a>
                 </li>
