--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,4 +1,13 @@
 // Your custom CSS
+@font-face {
+  font-family: 'MonospaceTypewriter';
+  src:  url('./MonospaceTypewriter.ttf') format('ttf'),
+        url('./MonospaceTypewriter.woff') format('woff');
+}
+
+body {
+  font-family: 'MonospaceTypewriter', sans-serif !important;
+}
 
 // Responsive Typography
 
