--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,7 +5,7 @@ $body-color: #000;
 // Custom.scss
 // Option A: Include all of Bootstrap
 
-@import '../../node_modules/bootstrap/scss/bootstrap';
+//@import '../../node_modules/bootstrap/scss/bootstrap';
 
 
 // Option B: Include parts of Bootstrap
@@ -17,15 +17,15 @@ $body-color: #000;
 @import "../../node_modules/bootstrap/scss/utilities";
 
 // Optional
-//@import "../../node_modules/bootstrap/scss/reboot";
-//@import "../../node_modules/bootstrap/scss/type";
+@import "../../node_modules/bootstrap/scss/reboot";
+@import "../../node_modules/bootstrap/scss/type";
 @import "../../node_modules/bootstrap/scss/images";
 //@import "../../node_modules/bootstrap/scss/code";
 @import "../../node_modules/bootstrap/scss/grid";
 @import "../../node_modules/bootstrap/scss/dropdown";
 @import "../../node_modules/bootstrap/scss/nav";
 @import "../../node_modules/bootstrap/scss/navbar";
-//@import "../../node_modules/bootstrap/scss/popover";
+@import "../../node_modules/bootstrap/scss/popover";
 @import "../../node_modules/bootstrap/scss/transitions";
 
 // Custom.scss
