Fixed layout and font issues in production build.

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,8 +1,8 @@
 // Your custom CSS
 @font-face {
   font-family: 'MonospaceTypewriter';
-  src:  url('./MonospaceTypewriter.ttf') format('ttf'),
-        url('./MonospaceTypewriter.woff') format('woff');
+  src:  url('MonospaceTypewriter.ttf') format('ttf'),
+  url('MonospaceTypewriter.woff') format('woff');
 }
 
 body {
