--- a/src/about.ejs
+++ b/src/about.ejs
@@ -12,17 +12,19 @@
   <article>
     <div class="container-fluid">
       <div class="row justify-content-center">
-        <div class="col-lg-10 col-md-12">
+        <div class="col-lg-10 col-sm-12">
           <div class="row">
             <div class="col-md-6 col-12">
-              <img class="img-fluid float-left mr-3 rounded" id="profile" alt="Marc Flennert"/>
+              <img class="img-fluid mr-3 rounded" id="profile" alt="Marc Flennert"/>
             </div>
             <div class="col-md-6 col-12">
               <p class="lead">A lifelong photographer, Marc Flennert's passion is the practice of cinematography.</p>
               <p>With the combination of his natural creativity and technical know how, he's able to infuse his approach with a style of his own. Over the years he's gained vast experience working hand in hand with award winning directors, producers and agencies servicing major brands. Flennert continues to refine his talents by continually immersing himself in an array of projects around the world.</p>
             </div>
+          </div>
         </div>
       </div>
+    </div>
   </article>
 </main>
 
