Update font sizes.

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -9,26 +9,38 @@ body {
   font-family: 'MonospaceTypewriter', sans-serif !important;
 }
 
+.copyright {
+  font-size: 50%;
+}
+
+.poster {
+
+}
+
+.bodycopy {
+  font-size: 70%;
+}
+
 // Responsive Typography
 
 html {
-  font-size: 0.8rem;
+  font-size: 0.5rem;
 }
 
 @include media-breakpoint-up(sm) {
   html {
-    font-size: 0.9rem;
+    font-size: 0.6rem;
   }
 }
 
 @include media-breakpoint-up(md) {
   html {
-    font-size: 1.0rem;
+    font-size: 0.8rem;
   }
 }
 
 @include media-breakpoint-up(lg) {
   html {
-    font-size: 1.1rem;
+    font-size: 1.0rem;
   }
 }
